--- a/metadata.yaml
+++ b/metadata.yaml
@@ -26,6 +26,7 @@ subjects:
 - !lcsh 'England -- Civilization -- Scandinavian influences'
 - !lcsh 'Hrólfs saga Kraka'
 - !lcsh 'Bjarkarimur'
+- GITenberg
 title: "The Relation of the Hrólfs Saga Kraka and the Bjarkarímur to Beowulf\r\nA\
   \ Contribution To The History Of Saga Development In England And The\r\nScandinavian\
   \ Countries"
